SERVER-31783 Prevent secondaries from generating UUIDs during upgrade